--- a/faq-bad-credit.html
+++ b/faq-bad-credit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Bad Credit Option - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -48,19 +48,19 @@
                     <div class="row justify-content-between align-items-center">
 
                         <!-- Header Logo Start -->
-                        <div class="col-xl-3 col-auto">
-                          <div class="header-logo">
-                            <!-- <h3>StudiosTrack</h3> -->
+                         <div class="col-xl-3 col-auto">
+                            <div class="header-logo">
+                              <!-- <h3>StudiosTrack</h3> -->
 
-                             <a href="index.html">
-                            <img
-                            class="dark-logo"
-                            src="assets/images/logo/st-logo.png"
+                               <a href="index.html">
+                              <img
+                              class="dark-logo"
+                              src="assets/images/logo/st-logo.png"
 
-                          />
-                          </a>
-                          </div>
-                      </div>
+                            />
+                            </a>
+                            </div>
+                        </div>
                         <!-- Header Logo End -->
 
                         <!-- Header Main Menu Start -->
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Bad Credit Options</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,22 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">The Best Options For Bad Credit Student Loans</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>Exploring Alternatives for Student Loans with Bad Credit Navigating the Financial Challenge of College The pursuit of higher education comes with significant costs. While it's undoubtedly an invaluable investment, the expense can be overwhelming, particularly for those just starting out at around eighteen with minimal credit history.</p>
+                                      <p>When both you and your parents face the hurdle of bad credit scores, financing college might appear to be a daunting task. After all, securing an affordable student loan can be elusive without a strong credit background. Luckily, there are options available for obtaining student loans with bad credit.</p>
+                                      <p>Applying for Federal Student Aid Federal student loans and grants are granted based on financial need rather than credit scores. These options provide a lifeline to students. Most individuals qualify for some form of federal funding to support their college journey. The Free Application for <a href="federal-loan.html">Federal</a> Student Aid (FAFSA) evaluates your needs, determining the kind and amount of aid you're eligible for.</p>
+                                      <p>If you demonstrate substantial financial need, you might qualify for grants like the Pell grant or the Federal Supplemental Education Opportunities Grant (FSEOG). These grants provide monetary assistance for college without the obligation of repayment. Even if grants aren't available, federal student loans can still offer substantial aid.</p>
+                                      <p>Unfortunately, federal loans might not fully cover tuition, housing, and related costs. In such cases, exploring private funding becomes essential. Acquiring private student loans with bad credit can seem daunting, but there are avenues to explore.</p>
+                                      <p><a href="parent-plus.html">Parent Plus</a> loans are federal loans typically designated for graduate students, but they're also accessible to parents of dependent undergraduate students. If you're a dependent student, your federal funding might fall short of covering all your expenses. Parent PLUS loans enable your parents to bridge the financial gap on your behalf.</p>
+                                      <p>Seeking a Cosigner with Strong Credit for Private Loans If you're not classified as a dependent or your parents don't qualify for a PLUS loan, private student loans become necessary to address remaining expenses. These loans typically require a cosigner. While most recommend a parent, alternative family members or close friends with good credit might be viable options.</p>
+                                      <p>However, it's crucial to understand that involving a cosigner binds their credit score to your loan. In the unfortunate event of loan default, both your credit and the cosigner's credit could suffer. On a brighter note, a cosigner with a robust credit history can lead to better interest rates. You might even secure a fixed interest rate loan with manageable monthly payments. Certain loans may also allow the cosigner to be released after a set number of consecutive on-time payments. Ensure you discuss this aspect with potential cosigners.</p>
+                                      <p>Repairing Your Credit Should securing a cosigner be unfeasible, repairing your credit score becomes a strategic path. It's a more achievable task than it might seem. Credit bureaus primarily assess two aspects: the longevity and diversity of your credit history. This can be established through methods like:</p>
+                                      <p><li>Maintaining an open credit line, paid in full monthly (e.g., an American Express card). Engaging in installment credit, such as financing a vehicle or another purchase, to showcase reliability over time. Maintaining a small revolving credit balance on your Visa or Mastercard, which can elevate your credit limit and improve your score. Through student loans, cosigner support, or credit-building endeavors, your college education can be funded. Even with bad credit, students have options to secure student loans and invest in their future. Embrace these strategies to ease the financial burden of education, demonstrating that gaining financial assistance can be achievable despite less-than-ideal credit.</li></p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
                                     </div>
 
 
@@ -344,21 +335,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="faq-loan-scam.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Student Loan Scams And How To Avoid Them?</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="loan-suntrust.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>What Can You Expect with SunTrust Student Loans?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -383,18 +374,18 @@
                             <div class="sidebar-widget">
                                 <h3 class="sidebar-widget-title mb-2">Popular posts</h3>
                                 <div class="sidebar-widget-content">
-                                  <ul class="sidebar-widget-list-post">
-                                    <li><a href="loan-lendkey.html">LendKey Private Student Loans</a></li>
-                                    <li><a href="loan-sallimae.html">Private Student Loans through Sallie Mae</a></li>
-                                    <li><a href="parent-plus.html">Parent PLUS Loans – Do Your Parents Qualify?</a></li>
-                                    <li><a href="loan-wells-fargo.html">Are Wells Fargo Student Loans Right for You?</a></li>
-                                    <li><a href="faq-nocosign.html">Can You Qualify for No Cosigner Student Loans?</a></li>
-                                    <li><a href="loan-cu.html">CU Student Loans – An Alternative to Bank Lenders</a></li>
-                                    <li><a href="loan-common-bond.html">Can You Decrease Your Student Loan Payments With CommonBond Student Loans?</a></li>
-                                    <li><a href="loan-college-ave.html">Could College Ave Student Loans Be the Lender of the Future?</a></li>
-                                    <li><a href="staffordloans.html">Everything You Need to Know About Stafford Loans</a></li>
-                                    <li><a href="federal-loan.html">Difference Between Federal and Private Student Loans</a></li>
-                                </ul>
+                                    <ul class="sidebar-widget-list-post">
+                                        <li><a href="loan-lendkey.html">LendKey Private Student Loans</a></li>
+                                        <li><a href="loan-sallimae.html">Private Student Loans through Sallie Mae</a></li>
+                                        <li><a href="parent-plus.html">Parent PLUS Loans – Do Your Parents Qualify?</a></li>
+                                        <li><a href="loan-wells-fargo.html">Are Wells Fargo Student Loans Right for You?</a></li>
+                                        <li><a href="faq-nocosign.html">Can You Qualify for No Cosigner Student Loans?</a></li>
+                                        <li><a href="loan-cu.html">CU Student Loans – An Alternative to Bank Lenders</a></li>
+                                        <li><a href="loan-common-bond.html">Can You Decrease Your Student Loan Payments With CommonBond Student Loans?</a></li>
+                                        <li><a href="loan-college-ave.html">Could College Ave Student Loans Be the Lender of the Future?</a></li>
+                                        <li><a href="staffordloans.html">Everything You Need to Know About Stafford Loans</a></li>
+                                        <li><a href="federal-loan.html">Difference Between Federal and Private Student Loans</a></li>
+                                    </ul>
                                 </div>
                             </div>
 
@@ -576,7 +567,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
