--- a/faq-loan-scam.html
+++ b/faq-loan-scam.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Avoid Student Loan Scams - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -49,18 +49,18 @@
 
                         <!-- Header Logo Start -->
                         <div class="col-xl-3 col-auto">
-                          <div class="header-logo">
-                            <!-- <h3>StudiosTrack</h3> -->
+                            <div class="header-logo">
+                              <!-- <h3>StudiosTrack</h3> -->
 
-                             <a href="index.html">
-                            <img
-                            class="dark-logo"
-                            src="assets/images/logo/st-logo.png"
+                               <a href="index.html">
+                              <img
+                              class="dark-logo"
+                              src="assets/images/logo/st-logo.png"
 
-                          />
-                          </a>
-                          </div>
-                      </div>
+                            />
+                            </a>
+                            </div>
+                        </div>
                         <!-- Header Logo End -->
 
                         <!-- Header Main Menu Start -->
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Student Loan Scams</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,25 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Protect Yourself from Student Loan Scams: What to Watch Out For</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>In your pursuit of financing your college education, it's crucial to remain vigilant against the prevalence of student loan scams. These scams target both high school seniors seeking affordable loans and college seniors about to embark on repaying their debts. Scammers are eager to take advantage of students and their finances, making it essential to be well-informed and cautious.</p>
+                                      <h5>Understanding Student Loan Scams During Application</h5>
+                                      <p>As you navigate the process of finding and applying for student loans, be aware of the various types of scams that could arise:</p>
+                                      <p><li>Paid Searches for Financial Aid: Some scammers offer to research financial aid and scholarships on your behalf, charging exorbitant fees of up to $1,000 for their "services." However, the information they provide can often be obtained for free online. Furthermore, they might consider their commitment fulfilled by securing a meager scholarship of $200. Rather than fall for such scams, it's wiser to allocate your funds toward your education.</li><li>Paid FAFSA Services: The Free Application for Federal Student Aid (FAFSA) process is, as the name implies, free. Any claim that promises to streamline the process or enhance your results for a fee is a scam. Genuine assistance with FAFSA can be obtained online at FAFSA.ed.gov or through your school's financial aid office. Be cautious of scammers who may not only charge you for free services but also compromise your personal and financial information.</li></p>
+                                      <h5>Avoiding Student Loan Scams After Graduation</h5>
+                                      <p>For recent graduates, the impending burden of repaying student loans can create vulnerability, making them susceptible to different types of scams:</p>
+                                      <p>The Consolidation Scam: If you're managing multiple student loans, the idea of consolidating them into a single, manageable monthly payment may seem appealing. However, external companies that promise this service for a "small" fee are often scam artists. Legitimate consolidation of federal student loans can only be done through the Federal Direct Consolidation Program—free of charge and accessible online. Beware of scams that may take your money and either deliver nothing, steal your identity, or move your loan to a higher-interest private lender.
+                                      </p>
+                                      <p>The "Debt Relief" or "Debt Forgiveness" Scam: Exploiting hopeful wishes, these scams capitalize on current events or news about debt forgiveness. Scammers may even use persuasive titles like the "Obama Forgiveness Program." Be cautious of anyone who claims they can make your student loan debts vanish. Whether they ask for fees or personal/financial information, they're likely aiming to steal your money or identity.</p>
+                                      <p>The Up-Front Fee Scam: Some companies may promise to permanently lower your interest rate—for a fee. Such offers are illegitimate. Giving in to this scam will only deplete your bank account without delivering any actual results. If you're seeking a lower interest rate, consider discussing loan refinancing with your lender. This legitimate approach could alter your terms, potentially reducing your monthly payment or increasing your principal payment while lowering your interest rate.</p>
+                                      <h5>General Guidelines to Prevent Scams</h5>
+                                      <p>Always approach third-party offers regarding your student loans with skepticism. If you're unsure about a company, conduct research by adding the keyword "scam" to their name in a Google search. Reach out to your lender to inquire if others have reported interactions with the company. If you identify a scam, report it to the Better Business Bureau. Above all, never share your credit card information with potential scammers. By staying informed and cautious, you can safeguard yourself from falling victim to these deceitful schemes.</p>
+
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
                                     </div>
 
 
@@ -344,21 +338,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="loan-discover.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Should You Look Into Discover Student Loans</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="faq-bad-credit.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>The Best Options for Bad Credit Student Loans</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -383,18 +377,18 @@
                             <div class="sidebar-widget">
                                 <h3 class="sidebar-widget-title mb-2">Popular posts</h3>
                                 <div class="sidebar-widget-content">
-                                  <ul class="sidebar-widget-list-post">
-                                    <li><a href="loan-lendkey.html">LendKey Private Student Loans</a></li>
-                                    <li><a href="loan-sallimae.html">Private Student Loans through Sallie Mae</a></li>
-                                    <li><a href="parent-plus.html">Parent PLUS Loans – Do Your Parents Qualify?</a></li>
-                                    <li><a href="loan-wells-fargo.html">Are Wells Fargo Student Loans Right for You?</a></li>
-                                    <li><a href="faq-nocosign.html">Can You Qualify for No Cosigner Student Loans?</a></li>
-                                    <li><a href="loan-cu.html">CU Student Loans – An Alternative to Bank Lenders</a></li>
-                                    <li><a href="loan-common-bond.html">Can You Decrease Your Student Loan Payments With CommonBond Student Loans?</a></li>
-                                    <li><a href="loan-college-ave.html">Could College Ave Student Loans Be the Lender of the Future?</a></li>
-                                    <li><a href="staffordloans.html">Everything You Need to Know About Stafford Loans</a></li>
-                                    <li><a href="federal-loan.html">Difference Between Federal and Private Student Loans</a></li>
-                                </ul>
+                                    <ul class="sidebar-widget-list-post">
+                                        <li><a href="loan-lendkey.html">LendKey Private Student Loans</a></li>
+                                        <li><a href="loan-sallimae.html">Private Student Loans through Sallie Mae</a></li>
+                                        <li><a href="parent-plus.html">Parent PLUS Loans – Do Your Parents Qualify?</a></li>
+                                        <li><a href="loan-wells-fargo.html">Are Wells Fargo Student Loans Right for You?</a></li>
+                                        <li><a href="faq-nocosign.html">Can You Qualify for No Cosigner Student Loans?</a></li>
+                                        <li><a href="loan-cu.html">CU Student Loans – An Alternative to Bank Lenders</a></li>
+                                        <li><a href="loan-common-bond.html">Can You Decrease Your Student Loan Payments With CommonBond Student Loans?</a></li>
+                                        <li><a href="loan-college-ave.html">Could College Ave Student Loans Be the Lender of the Future?</a></li>
+                                        <li><a href="staffordloans.html">Everything You Need to Know About Stafford Loans</a></li>
+                                        <li><a href="federal-loan.html">Difference Between Federal and Private Student Loans</a></li>
+                                    </ul>
                                 </div>
                             </div>
 
