--- a/graduate-loan.html
+++ b/graduate-loan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Graduate Student Loans - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Graduate Loans</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,27 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Graduate Student Loans</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <h5>Financing Advanced Education with studiostrack</h5>
+                                      <p>Whether you’re returning to school after a hiatus or planning to pursue graduate studies immediately following your undergraduate degree, the question of how to finance two additional years of costly education is likely on your mind.</p>
+                                      <p>As a graduate student, while you might secure a teaching or research assistantship, it's unwise to solely rely on such positions to cover your studiostrack expenses. These roles are highly competitive, and funding for them can be uncertain. Instead of hoping for a full ride, a prudent approach involves considering graduate student loans as your means to afford graduate school.</p>
+                                      <p>As a graduate student, you won’t be eligible for a Pell grant or many other subsidies available to undergraduates. Nevertheless, you have attractive options, including various private loans.</p>
+                                      <p>Stafford Graduate Student Loans Though you won't be eligible for subsidized loans, you can access up to $20,500 per year in direct federal loans (Stafford loans). As long as your loan total remains under $138,500 for both your undergraduate and graduate years, a substantial portion of your graduate degree expenses can be covered by a Stafford loan. Additionally, students pursuing certain medical or health fields enjoy higher limits.</p>
+                                      <p>Stafford loans feature fixed interest rates set annually, capped at 9.5%. In the 2013-14 academic year, graduate students with Stafford loans paid an interest rate of approximately 5.4%.</p>
+                                      <p>Graduate PLUS Loans A graduate PLUS loan allows you to borrow sufficient funds to cover tuition, living costs, and supplies. However, these loans are the sole federal loans necessitating a credit check. A low credit score might lead to a rejection for a PLUS loan.</p>
+                                      <p>If you're currently an undergraduate considering a graduate PLUS loan, consider strategies to improve your credit over the years before graduation. Responsible use of credit cards, purchasing a car, maintaining consistent employment—these steps can enhance your credit score and likelihood of PLUS loan approval.</p>
+                                      <p>Interest rates for PLUS loans are quite similar to those of Stafford loans, but they're capped at 10.5%, not 9.5%. In the previous year, graduate students paid an interest rate of 6.41% on their PLUS loans.</p>
+                                      <p>Perkins Loans Demonstrating substantial financial need could qualify you for up to $8,000 annually in Perkins loans for graduate studies. Interest rates for these loans are fixed at 5%. Be aware, though, that these funds are limited. A limited number of Perkins loans are awarded each year, exclusively to students with the most pressing financial needs.</p>
+                                      <p>Private Graduate Student Loans If you don't meet the criteria for a PLUS loan or if your other federal loans don't fully cover your grad school expenses, alternative avenues exist. In fact, at this stage of your academic journey, private student loans might be a viable choice if you have a favorable credit history.</p>
+                                      <p>This is particularly relevant if you're returning to school after industry work. Over time, you should have cultivated credit through credit card management, car or home financing, consistent employment, and credit score building. By now, you should be able to secure a loan without requiring a cosigner, obtaining a decent interest rate and payment plan based on your credit history.</p>
+                                      <p>For current undergraduate students researching graduate school finances, attaining this position is achievable in a relatively short period by practicing prudent credit-building methods (maintaining credit cards, financing a vehicle or property, etc.). However, a poor or insufficient credit history isn't an insurmountable obstacle.</p>
+                                      <p>If a family member or friend with strong credit cosigns a private student loan, your chances of approval increase significantly. Moreover, you're more likely to secure a favorable interest rate.</p>
+                                      <p>Caution is advised regarding variable interest rate loans. Despite initial interest rates below 3%, some private graduate student loans can be enticing. However, as interest rates fluctuate, your payments might substantially increase.</p>
+                                      <p>Unlike federal graduate student loans, private loans lack the same forgiveness and flexibility features. If you face job loss or financial hardship, federal loans generally offer better repayment solutions compared to private loans. These factors, along with variable interest rates, should guide your decision-making process before committing to any private graduate student loan.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p>At <strong>StudiosTrack</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
                                     </div>
 
 
@@ -346,19 +342,19 @@
                                         <div class="inner">
                                             <a href="privateloan.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Getting Funding with a WSFS Bank Private Student Loan</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="loan-citizen-bank.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Private Student Loans From Citizen Bank - Pros and Cons?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +572,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
