--- a/loan-citizen-bank.html
+++ b/loan-citizen-bank.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (Citizen Bank) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Citizen Bank</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,23 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Private Student Loans From Citizens Bank – Advantages and Disadvantages</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>If you're among the many students entering college today, you might have realized that your federal student loans don't fully cover the cost of attending. While they can handle tuition and housing to an extent, other expenses like meal plans, books, and various college-related costs still remain. Thankfully, private lenders like Citizens Bank can provide alternative options.</p>
+                                      <p>Despite federal financial aid's consistent maximum loan limits, the overall expenses, especially tuition fees, have continued to rise. Thus, while completing the FAFSA for government assistance remains essential, exploring private student loans becomes necessary. But how do you choose the right one? What do you need to understand about different lenders and their capabilities?</p>
+                                      <p>Citizens Bank is a major player in private student lending, with many students opting for their services due to the familiarity of the name and the institution's stability in the coming years. However, is Citizens Bank truly the best choice? Let's delve into the Pros and Cons of Private Student Loans from Citizens Bank, their borrower benefits, and the implications of partnering with them.</p>
+                                      <p>Pro – Competitive Interest Rates Interest rates are a major concern for students seeking loans. With private student loans from Citizens Bank, you're presented with a choice between fixed or variable rate loans. Variable rate loans range from 2.56% to 8.16%, fluctuating annually with the market. On the other hand, fixed rate loans range from 4.99% to 10%, remaining constant throughout your loan term unless you decide to consolidate or refinance.</p>
+                                      <p>These rates are notably competitive, standing well in comparison to both other private lenders and federal loans. It's worth noting that PLUS loans have a capped interest rate of 10.5%. This means that even in a less favorable scenario where you receive the highest fixed rate interest from private student loans from Citizens Bank, it would still fall short of the maximum interest rate of a <a href="federal-loan.html">Federal</a> PLUS loan.</p>
+                                      <p>Con – Required Waiting Period for Cosigner Release Conversely, if you're a student seeking a loan from Citizens Bank, you'll likely need a cosigner. While this is common practice, it can be a source of frustration. Some reviewers have expressed discontent over the mandatory 36-month waiting period for cosigners to be released from their obligations concerning Private Student Loans From Citizens Bank.</p>
+                                      <p>Nonetheless, it's important to note that we've encountered lenders that demand 48 monthly payments on time and in full before releasing cosigners. In this context, a 36-month waiting period seems relatively standard. However, if you wish to avoid cosigning altogether or desire a quicker path to cosigner release, this particular lender might not be your ideal choice.</p>
+                                      <p>Pro – Interest Rate Reduction Opting for Private student loans from Citizens Bank grants you the potential to reduce your interest rate by up to 0.5% through simple actions. A 0.25% reduction is available if you or your cosigner possess a qualifying account with Citizens Bank. An additional 0.25% reduction is accessible for enrolling in automatic monthly payments. These combined reductions can significantly lower your already competitive interest rate.</p>
+                                      <p>Con – Absence of Unemployment Protection Ultimately, while Private student loans from Citizens Bank provide diverse repayment options, they lack safeguards for unemployment or financial hardship. In the event of job loss, you'll remain responsible for your monthly loan payments. Failure to adhere to these payments will lead to collection actions, triggering default loan consequences.</p>
+                                      <p>This shortfall is common among private student loans. Unlike federal loans, which typically offer deferment options during unemployment, military deployment, and other exceptional circumstances, private student loans rarely provide such leniency. However, meticulous planning and judicious savings can empower you to select a repayment plan that suits your needs.</p>
+                                      <p>For instance, a 15-year repayment plan enables you to initiate regular payments (usually ranging between $90 and $110 per month) while still in school. Alternatively, you can opt to pay only the interest during your academic tenure, with post-graduation payments ranging from $91 to $118 per month. If you prefer, you can defer payments until after graduation, resulting in slightly higher interest rates and monthly payments ranging from $126 to $174.</p>
+                                      <p>Multiple options exist, and Private student loans from Citizens Bank indeed offer several valuable borrower benefits. Success lies in your ability to strategize and establish arrangements to manage loan payments, even in the face of unemployment or financial adversity.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
                                     </div>
 
 
@@ -344,21 +336,22 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="graduate-loan.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Graduate Student Loans - How to Fund Further Education</h6>
                                             </a>
                                         </div>
                                     </div>
 
-                                    <div class="nav-item next">
+                                    <div class="nav-item prev">
                                       <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
+                                        <a href="privateloan.html">
+                                          <div class="hover-bg"></div>
+                                          <h6>Private Student Loans - Everything You Need To Know</h6>
+                                         </a>
                                       </div>
                                   </div>
+
                                 </div>
                             </div>
 
@@ -576,7 +569,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
