--- a/loan-college-ave.html
+++ b/loan-college-ave.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (College Ave) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>College Ave</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,27 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Could College Ave Student Loans Be The Lender Of The Future?</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>When you think of private student loans, you probably think of big-name lenders that have been around for a long time, like Sallie Mae, SunTrust, and Citizens Bank. There are some new names in town, though, and among them is College Ave Student Loans. This 21st century lender is based online, and they pride themselves on solely dealing with student loans.</p>
+                                      <p>Because they focus on academic loans and no others, you know that College Ave Student Loans will stay up to date on all of the latest trends and changes in the world of student lending. All loan applications are submitted and processed online, and you can choose to apply for a loan with or without a cosigner.</p>
+                                      <h5>Why Choose a Private Lender Over Federal Student Loans</h5>
+                                      <p>Of course, College Ave is a private lender, and we all know that federal student loans traditionally provide a lot more protection for students should they fall on financial hardship, not to mention that very attractive six-month grace period between leaving school and beginning your monthly loan repayments. So why should you consider a private lender over federal student loans?</p>
+                                      <p>First of all, you should absolutely fill out a FAFSA (Free Application for Federal Student Aid) and find out how much aid you are eligible for through the federal government before you approach any private lender. For one thing, you could find that you’re eligible for grant money that never needs to be paid back or that you qualify to receive subsidized <a href="staffordloans.html" >Stafford loans</a> that don’t collect interest until after you graduate.</p>
+                                      <p>Second, you should find out what you can expect if you take out a PLUS loan for graduate school (or if your parents choose a <a href ="parent-plus.html" >PLUS loan</a> to cover your undergraduate years). These loans are all set at fixed rates, which won’t change throughout the time you’re paying them. However, where those interest rates are set does vary from year to year.</p>
+                                      <p>For example, PLUS loans are capped at 10.5%. In 2013, rates were set at 6.41%, but last year they rose to 7.21%. College Ave Student Loans’ interest rates range from 2.06% to 10.2%, depending on your credit history and the market.</p>
+                                      <p>You won’t ever see dramatic changes in interest rates from month to month. Rather, you’ll see interest rates adjusted to fit the market once per year. While this is a bit of a gamble, it also doesn’t lock you into a rate that remains high for as long as you’re paying on the loan, simply because you started school in a year when interest rates were inflated.</p>
+                                      <p>Furthermore, if you can find someone with a great credit history to cosign with you, you will benefit from a discount on your interest rate. And, if you make your required payments with their automatic debit services, College Ave will deduct 0.25% from your interest, as well.</p>
+                                      <h5>Find Out if You Qualify for College Ave Student Loans Immediately</h5>
+                                      <p>In addition to providing online applications – that you can complete on your computer, phone, tablet, or other mobile device – College Ave also gives you immediate feedback on your loan. Instead of waiting to find out if you qualify or not, their credit decision is instant. You’ll have the information you need to decide between federal and private student loans without all the waiting.</p>
+                                      <h5>What About Repayment Options and Deferrals?</h5>
+                                      <p>This is another place where federal student loans have long had the upper hand over private loans. Private lenders have a terrible reputation for being incredibly strict with their repayment structures and completely inflexible when it comes to financial hardship.</p>
+                                      <p>Thousands of students choose federal loans over private loans every year because they are afraid of what might happen if they lose their job or find themselves unable to make their monthly payments for any reason. The federal government is known for allowing loan deferrals during times of hardship, while private lenders are known for being real scrooges about any variance in payments.</p>
+                                      <p>Well, a new day may be dawning for private student loans. Not only do you have the chance to get lower interest rates, but now you have more freedom with repayment plans and deferrals, too. College Ave student loans proudly offer multiple repayment plans to fit your budget, along with deferrals for students continuing their education or who’ve had recent financial hardship.</p>
+                                      <p>The future of student loans lies in instant feedback, low interest rates, and flexible repayment plans. While these have all been the territory of federal loans for a long time, the tides are turning. We expect to see more and more private lenders that work solely with student loans and continue to change the way we borrow money for school. College Ave has become a successful lending company in relatively little time with this model, and we would be surprised if others didn’t follow suit.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
                                     </div>
 
 
@@ -344,21 +340,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="loan-common-bond.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Can You Decrease Your Student Loan Payments with CommonBond Student Loans?</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="staffordloans.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Everything You Need To Know About Stafford Loans?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +572,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
