--- a/loan-common-bond.html
+++ b/loan-common-bond.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (CommonBond) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>CommonBond</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,24 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Can You Reduce Your Student Loan Payments with CommonBond Student Loans?</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>While the economy is gradually recovering, many individuals are still feeling the financial aftermath of the housing crash in 2008. People across the United States are exploring ways to minimize debt and monthly expenses, and unfortunately, some are resorting to defaulting on their student loans to avoid repayment. Defaulting poses multiple challenges, and it's strongly advised against. Instead, we recommend considering the option of refinancing your student loans to secure lower monthly payments and better interest rates. CommonBond student loans might be a solution for you.</p>
+                                      <p>Focused on graduate students, CommonBond was established in 2013 to assist students with MBAs, engineering degrees, medical degrees, and other high-cost educations in repaying their student loans as they embark on their careers in their chosen fields. According to David Klein, co-founder of CommonBond, "Our core mission is to reduce the cost of higher education."</p>
+                                      <p>How Does CommonBond Student Loans Operate? As a relatively new company operating in an economy with a substantial portion of people holding existing debts, CommonBond student loans primarily emphasize refinancing. However, new students can also borrow from CommonBond. Whether you are seeking to refinance and consolidate your existing loans or aiming for a new loan to support your undergraduate or graduate studies, CommonBond is there to assist.</p>
+                                      <p>According to Klein, the company's focal points are savings and community support. Their aim is to help you alleviate your debt burden. But how? To begin with, they offer refinancing services for loans up to $220,000. When you opt for refinancing, you can choose among three types of loans: fixed rate, variable rate, and hybrid. With auto payment discounts applied, variable rate loans start as low as 1.93%; fixed rate loans begin at 3.74%, and hybrid loans start at 3.99%. When compared to the current federal PLUS loan's interest rate of 7.68%, these rates are notably favorable.</p>
+                                      <p>For those in need of funds for education, the savings are accessible as well. Current students can secure a loan for 100% of their tuition (minus other financial aid) at a fixed rate of either 6.24% for a 10-year repayment plan or 6.74% for a 15-year repayment plan.</p>
+                                      <p>Benefits of Borrowing or Refinancing with CommonBond Apart from the remarkably low interest rates, CommonBond student loans provide several other advantages. There are no penalties for prepayment. If your goal is to expedite your debt repayment by swiftly reducing your principal amount, you can do so without concern about hidden fees that could hinder your interest savings.</p>
+                                      <p>In situations of unemployment, returning to school, military deployment, or financial adversity, CommonBond offers deferment and forbearance options. Similar to federal loans and distinct from many conventional private lenders, CommonBond collaborates with you and supports you in avoiding loan default for as long as needed to regain financial stability.</p>
+                                      <p>Being a relatively young company established by business professionals and investors who comprehend the impact of burdensome student debt, CommonBond remains attuned to the current economic conditions. They recognize that exorbitant interest rates and rigid repayment terms without forbearance options are no longer viable solutions.</p>
+                                      <p>Refinancing and Consolidating Federal Loans Generally, we wouldn't recommend refinancing or consolidating federal student loans with a private loan. This is because the process involves converting federal loans into a single private loan, resulting in the loss of the low, fixed interest rate and the benefits associated with federal loan repayment.</p>
+                                      <p>However, with CommonBond, the situation is somewhat different. Due to their emphasis on forbearance and deferment when necessary, coupled with interest rates significantly lower than even federal student loan rates, this approach can be justified. The application is conducted entirely online and takes only a few minutes. Students can promptly determine if they qualify for consolidation and refinancing, ascertain the rate applicable to them, and proceed, all within a matter of minutes.</p>
+                                      <p>A Unique Model CommonBond student loans operate on investments made by individuals and corporations. Despite the low interest rates, investors experience positive returns on investment (ROIs) in a relatively short span. Through this crowdfunding-style lending and refinancing approach, CommonBond has established itself within just two years. Anticipating a growing number of students opting for refinancing and loan acquisition through CommonBond in the near future, it wouldn't be surprising to witness more lenders adopting their model in the years to come.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
+
                                     </div>
 
 
@@ -344,21 +337,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="loan-cu.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>CU Students - An alternative To Bank Lenders</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="loan-college-ave.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +569,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
