--- a/loan-cu.html
+++ b/loan-cu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (CU Student Loans) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>CU Student Loans</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,27 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">CU Student Loans – An Alternative To Bank Lenders </h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>If you’re looking for private student loans, you’re probably wondering if you have to deal with one of the large banks or lenders or if you can go with a smaller company that can give you more personal services. If you’re like so many people who’ve switched from keeping your money in banks to working with credit unions over the past few years, you’re probably dreading even considering borrowing from a large bank. Well, thanks to CU Student Loans, you have other options.</p>
+                                      <p>CU Student Loans actually isn’t a single entity; they’re a cooperative of sorts. To compete against the big banks, credit unions all over the United States have banded together to create CU Student Loans. So, if you hate the idea of working with the banks that have charged you so many service fees and penalties for small financial infractions, you can choose to deal with credit unions instead.</p>
+                                      <h5>Advantages of CU Student Loans Over Other Private Lenders</h5>
+                                      <p>There are actually a lot of advantages to working with CU Student Loans. Their interest rates are very low, ranging from 2.76% to 7.76%. Though they don’t offer fixed rate loans, even the high end of these interest rates is lower than you’ll find with a lot of lenders.</p>
+                                      <p>There are also no origination fees associated with any loans from CU Student Loans. This is a huge saving, and it makes signing with them really tempting. In addition to this, students who go with student loans from credit unions often report much better customer care and service.</p>
+                                      <p>To be approved for a loan, you must pass a credit check and be able to prove that you have an annual income of at least $24,000. Because most students can’t get approved for a loan this way, CU Student Loans affiliates are happy to accept cosigners on their loans, which brings us to the next big advantage of going with them over most other private lenders.</p>
+                                      <p>Other private lenders will generally release cosigners from any liability on a loan after 36 to 48 consecutive, on time, and in full payments on the part of the borrower. CU Student Loans, however, have a program in place to release cosigners after just one year with 12 regular payments (made on time and in full, of course).</p>
+                                      <p>Also, though the requirements for approval are in line with other private lenders, the credit score rating for approval is usually more forgiving with CU Student Loans.</p>
+                                      <p>Because credit unions are not-for-profit entities, you know that they are not trying to make money off of you. They are more service oriented and typically work with their clients and partners more than most commercial banks do. Along these lines, there is no penalty associated with paying off your loan early. Some private lenders are so set on collecting interest on your loan that they will actually charge you money if you try to pay it off before it’s due to save on interest. CU Student Loans are typically based on a 15-year repayment plan, and they’ll never punish you for paying early.                                     </p>
+                                      <h5>How to Get a Loan From CU Student Loans</h5>
+                                      <p>To apply for a loan with CU Student Loans, just visit their website and fill out an application. You will be immediately notified if you are approved or not. If you’re approved for a loan, you’ll need to find your local credit union branch affiliated with CU Student Loans and become a credit union member.</p>
+                                      <p>oining a credit union typically involves nothing more than opening a savings account and depositing $5 into it. If you have $5 in your pocket, you could be on your way to getting a great loan with excellent customer service and low interest rates.</p>
+                                      <h5>Who Should Apply for CU Student Loans?</h5>
+                                      <p>The only disadvantage to working with CU Student Loans is that you cannot choose a fixed interest rate. That said, their range for their variable interest rates is still very attractive, even at its high end. If you are concerned about paying more in interest and you feel that you can get a better deal on a fixed rate loan, you should probably look elsewhere.</p>
+                                      <p>If you need a cosigner for your loan but you want to release that person from their obligation to your debt as soon as possible, this is a fantastic option. If you want to save money on interest and you can work to aggressively pay your debt off early, you’ll love that there’s no penalty for paying off your loan early. And, of course, if you just want to avoid dealing with large corporate banks and lenders, you can do that with the help of CU Student Loans.</p>
+
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
                                     </div>
 
 
@@ -344,21 +340,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="faq-nocosign.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Can You Qualify for No Cosigner Student Loans?</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="loan-common-bond.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Can You Decrease Your Student Loan Payments With CommonBond Student Loans?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +572,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
