--- a/loan-discover.html
+++ b/loan-discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (Discover) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Discover</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,24 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Exploring Discover Student Loans: Assessing Benefits and Considerations</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>Discover, a brand often linked with credit cards, might not immediately come to mind when you think of student loans. The common association of credit card companies with high interest rates might make Discover an unexpected choice for long-term academic loans. However, Discover student loans prove to be surprisingly competitive within the realm of private student loans.</p>
+                                      <p>If you find that your federal financial aid falls short of covering the costs associated with undergraduate or graduate education, it's worth delving into the merits of Discover student loans.</p>
+                                      <p>Absence of Maximum Loan Limit A notable advantage of Discover student loans is the absence of a maximum borrowing limit. This flexibility is especially valuable for those pursuing multiple majors or contemplating an extended academic path. Given the escalating tuition costs, this lender's willingness to accommodate higher borrowing needs is a distinct benefit.</p>
+                                      <p>Incentives for Academic Excellence Discover introduces a rewarding feature for academic performance – maintaining a minimum 3.0 GPA can earn you a 1% cash-back reward on your loan. Accessing this reward is as simple as logging into the Discover student loans website and providing your grade information. This reward can be directed toward loan repayment, purchasing supplies, or addressing personal needs.</p>
+                                      <p>Discounts for Automated Payments By consistently ensuring sufficient funds in your account for automated loan payments, you qualify for a 0.25% interest rate reduction each month. This reduction could translate to a lower monthly payment and potentially expedite your loan repayment.</p>
+                                      <p>A word of caution, though, for those considering this option. If your account faces three instances of insufficient funds leading to payment returns, automatic payments will be canceled. This entails a loss of the discount, making it crucial to diligently manage timely and full payments. Failure to do so could result in default and the loan being sent to collections.</p>
+                                      <p>Options for Interest Rates Discover offers the choice between fixed and variable interest rate loans. Variable rate loans often feature lower initial interest rates, but they can fluctuate annually based on market conditions. In contrast, fixed rate loans carry slightly higher rate ranges, ensuring predictability from year to year.</p>
+                                      <p>Fee-Free Approach Discover takes pride in its fee-free stance on student loans. There are no application charges, origination fees, or late fees. While maintaining punctuality in loan payments is crucial, the absence of significant late fees offers reassurance even in situations of minor delay.</p>
+                                      <p>Effortless Application Process The convenience of Discover student loans extends to the online application process, which can be completed in 15 minutes or less. Adding a cosigner is straightforward if required, and swift approval along with interest rate details are provided promptly. In a fast-paced world, this efficiency is a substantial advantage, alleviating waiting time when addressing vital financial commitments.</p>
+                                      <p>Comprehensive Customer Support Discover offers robust customer support through FAQs, online resources, telephone assistance, and in-person services. Some customers equate their customer service to the attentive care associated with credit unions. Additionally, Discover's website provides valuable resources on debt management and prudent credit usage to improve credit scores.</p>
+                                      <p>Limitation: Loan Consolidation Unavailable Amid these advantages, Discover student loans do have one significant limitation – loan consolidation is not an option. Consolidation simplifies payment by merging all loans into a single monthly payment with a unified interest rate. While many reputable private lenders offer this service, it's not part of Discover's student loan offerings.</p>
+                                      <p>In our assessment, the benefits of Discover student loans outweigh the drawbacks. The solitary disadvantage can be effectively managed by setting reminders for timely monthly payments. Meanwhile, the array of advantages yields long-lasting benefits and considerable value.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
                                     </div>
 
 
@@ -344,21 +337,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
-                                                <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
-                                            </a>
+                                          <a href="privateloan.html">
+                                            <div class="hover-bg"></div>
+                                            <h6>Private Student Loans - Everything You Need To Know</h6>
+                                           </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="faq-loan-scam.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Student Loan Scam And How To Avoid Them</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +569,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
