--- a/loan-lendkey.html
+++ b/loan-lendkey.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (LendKey) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>LendKey</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,29 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Exploring LendKey's Private Student Loans</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
-                                      <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                     <p>Discover the LendKey Advantage LendKey operates as a bridge between consumers and community lenders, striving to establish a platform that offers the most transparent, accessible, and cost-effective borrowing solutions within the realm of online lending.</p>
+                                     <p>Amidst various lending options, students and parents are drawn to LendKey for three compelling reasons:</p>
+                                     <p><li>Inclusive Underwriting Approach In essence, LendKey leverages the strength of community lenders, including not-for-profit credit unions and community banks, to enhance the likelihood of loan approval. These community lenders boast a more favorable cost of funds compared to commercial banks and other online lenders. Consequently, they can extend these savings to borrowers by offering lower interest rates and a higher approval rate.
+                                      Transparency & Choice Equipping students with comprehensive knowledge about their borrowing decisions is paramount. LendKey takes this commitment seriously, not only by offering financial education resources and guidance but also by developing interactive tools that illustrate how each choice influences the loan. Representing numerous community lenders across the nation, LendKey empowers students and families to select the loan that aligns with their needs.
+                                      Exceptional Customer Service While community lenders fund each loan through LendKey, the platform establishes enduring connections with borrowers by providing unrivaled customer service. An internal survey reveals that 97% of LendKey borrowers express satisfaction with their loan experience (based on over 1,000 responses). Borrowers are treated as valued individuals, not mere leads, and are supported throughout the origination process and the loan's lifecycle. The same dedicated customer service representatives who assist borrowers during application also remain available for inquiries until the loan is fully repaid.
+                                      </li></p>
+                                     <p>Benefits of LendKey's Private Student Loan Product • Applicable for both undergraduate and graduate studies • Enjoy a 0.25% Interest Rate Reduction with automatic payments • Explore potential tax deductibility of interest paid on private student loans • Benefit from no origination fees or prepayment penalties • Opportunity for cosigner release • Embrace a 30-day no-fee return policy for all borrowers • All loans are facilitated by community lenders like not-for-profit credit unions and community banks • Utilize funds for qualified educational expenses, including:</p>
+                                     <p>
+                                      <li>Tuition</li>
+                                      <li>Room and board</li>
+                                      <li>Books</li>
+                                      <li>Computers and related technology</li>
+                                      <li>And more!</li>
+
+                                     </p>
+                                     <p>Ready to embark on your educational journey? Apply for a LendKey Private Student Loan today and unlock your potential.</p>
+
+                                     <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
+                                     <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
                                     </div>
 
 
@@ -344,21 +342,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="loan-sallimae.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Private Student Loans Trough Sallie Mae</h6>
                                             </a>
                                         </div>
                                     </div>
 
-                                    <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                    <!-- <div class="nav-item next">
+                                        <div class="inner">
+                                            <a href="privateloan.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Private Student Loans - Everything You Need To Know</h6>
+                                            </a>
+                                        </div>
+                                    </div> -->
                                 </div>
                             </div>
 
@@ -576,7 +574,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
