--- a/loan-sallimae.html
+++ b/loan-sallimae.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (SallieMae) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Sallie Mae</li>
                     </ul>
                 </div>
             </div>
@@ -305,32 +305,35 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Private Student Loans Through Sallie Mae</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
-                                      <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
-                                    </div>
+                                    <p>Get the funds necessary to facilitate higher education Student loans from Studiostrack in partnership with Sallie Mae® could provide assistance!</p>
+                                    <p>For those enrolled in degree-granting institutions. Whether you're pursuing an undergraduate or graduate degree, these flexible loans are tailored to cater to your requirements:</p>
+                                    <p>Competitive variable and fixed interest rates No origination fee or prepayment penalty1 Numerous repayment alternatives Discover the loan that suits you best.</p>
+                                    <h5>Undergraduate</h5>
+                                    <p>Smart Option Student Loan® for Undergraduate Students Cover expenses for your bachelor's, associate's, or certificate program at a degree-granting institution Graduate</p>
+                                    <h5>Graduate School Loan</h5>
+                                    <p>Finance your master's and doctoral degree expenses</p>
+                                    <h5>MBA Loan</h5>
+                                    <p>Manage your business school costs while pursuing your Master of Business Administration degree</p>
+                                    <h5>Medical School Loan</h5>
+                                    <p>Support your medical degree expenses in allopathic, general, osteopathic, podiatric, radiology, sports, and veterinary medicine</p>
+                                    <h5>Dental School Loan</h5>
+                                    <p>Address your dental degree expenses in general dentistry, endodontics, oral and maxillofacial surgery, orthodontics, pediatric dentistry, periodontics, and prosthodontics</p>
+                                    <h5>Graduate School Loan for Health Professions</h5>
+                                    <p>Sustain your health professions degree expenses in allied health, nursing, pharmacy, and other graduate-level health programs</p>
+                                    <h5>Law School Loan</h5>
+                                    <p>Handle school-related costs during your pursuit of a law degree.</p>
+                                    <p>Discover the loan that suits you best.</p>
+                                    <h5>Borrow responsibly</h5>
+                                    <p>We advise students and families to commence their financial planning with savings, grants, scholarships, and federal student loans to fund their education. It's essential to assess projected monthly loan payments and anticipate future earnings before considering a private student loan.</p>
+                                    <p>These loans are offered by Sallie Mae Bank or a partnering lender. Studiostrack is not the loan issuer and receives compensation from Sallie Mae for customer referrals.</p>
+                                    <p>Smart Option Student Loan and graduate loan products: These loans are available to students at participating degree-granting institutions. Information about Smart Option Student Loan pertains exclusively to undergraduates. MBA, Medical, Dental, and Law School Loans do not apply to Graduate Certificate/Continuing Education coursework. Non-U.S. citizens or permanent residents residing in the U.S., attending a U.S. institution, must apply with a creditworthy cosigner (who should be a U.S. citizen or permanent resident) and provide valid government-issued photo ID for identity verification. Applications adhere to a minimum loan amount request of $1,000. Current credit and eligibility criteria apply.</p>
+                                    <p>Although there are no penalties or fees for prepayment, prepayments are allocated as specified in your promissory note—first to Unpaid Fees and costs, then to Unpaid Interest, and finally to Current Principal.</p>
+                                    <p><strong>STUDIOSTRACK RETAINS THE RIGHT TO ALTER OR DISCONTINUE PRODUCTS, SERVICES, AND BENEFITS WITHOUT PRIOR NOTICE.</strong></p>
+                                    <p>© 2021 Sallie Mae Bank. All rights reserved. Sallie Mae, the Sallie Mae logo, and other Sallie Mae names and logos are service marks or registered service marks of Sallie Mae Bank. All other names and logos used are trademarks or service marks of their respective owners. SLM Corporation and its subsidiaries, including Sallie Mae Bank, are not endorsed by or affiliated with agencies of the United States of America.</p>
+                                  </div>
 
 
 
@@ -344,21 +347,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="loan-lendkey.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>LendKey Private Student Loans</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="parent-plus.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Parent Plus Loans - Do your Parents Qualify?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,11 +579,11 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
-          <i class="fa fa-arrow-up arrow-top"></i>
-          <i class="fa fa-arrow-up arrow-bottom"></i>
+            <!-- <span>^</span> -->
+            <i class="fa fa-arrow-up arrow-top"></i>
+            <i class="fa fa-arrow-up arrow-bottom"></i>
         </a>
         <!-- Scroll Top End -->
     </div>
