--- a/loan-suntrust.html
+++ b/loan-suntrust.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Apply Student Loan (SunTrust) - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>SunTrust</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,26 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Understanding SunTrust Student Loans: Exploring Your Options</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
+                                      <p>When federal student aid falls short, leaving you pondering how to bridge the gap, take a deep breath and rest assured – you're not alone. Many students encounter this challenge, and institutions like SunTrust are stepping up to provide solutions for covering the cost of attendance.</p>
+                                      <p>Federal student loan limits have failed to keep pace with the rising expenses of tuition, housing, and supplies. The annual increment in college tuition, coupled with the demand for up-to-date technology like laptops and tablets, poses financial challenges for students. Despite these financial strains, the maximum allowances of federal student loans have remained stagnant over the past decade.</p>
+                                      <p>Is Abandoning Federal Loans a Wise Move? Given this scenario, some students contemplate bypassing the Free Application for Federal Student Aid (FAFSA) process and turning directly to private lenders such as SunTrust Student Loans. However, it's crucial not to rush this decision. Firstly, federal funding for student loans has not diminished in recent years; it remains a substantial resource. Federal student loans continue to offer favorable terms, featuring fixed interest rates established as of June 1st each disbursement year.</p>
+                                      <p>Starting your quest for college funding with federal options is advised. You might discover that your financial circumstances qualify you for a grant or an unsubsidized loan, minimizing interest costs during your college years. In some cases, a combination of <a href="staffordloans.html">Stafford</a> and <a href="parent-plus.html">Parent PLUS</a> loans could adequately cover your tuition and fees.</p>
+                                      <p>However, if your financial puzzle remains incomplete, private lenders like SunTrust can provide the missing pieces. So, what does the process of applying for SunTrust Student Loans entail?</p>
+                                      <p>Eligibility Criteria for SunTrust Student Loans Unlike federal loans, which hinge on financial need, private student loans rely on credit history. Applicants with unfavorable credit may encounter rejection or face elevated interest rates. If you're 18 or older, you can apply for a SunTrust loan independently. However, to secure a favorable interest rate, having a parent or a creditworthy cosigner is advisable. Eligibility prerequisites include:</p>
+                                      <li>US citizenship or legal residency</li>
+                                      <li>Possession of a valid social security number</li>
+                                      <li>Enrollment in a Title IV school</li>
+                                      <p>Determining Borrowing Limits Loan amounts are determined by subtracting other financial aid from the total cost of attendance at your institution. The cap for this figure stands at $65,000 annually or $150,000 over your college tenure. This underscores the importance of maximizing federal funding initially, given its low-interest nature and automatic deferment until graduation. Often, a private loan alone may not suffice to cover the entire cost of education.</p>
+                                      <p>Benefits for Borrowers Traditionally, many private student loans necessitated immediate repayment. However, this landscape is evolving. SunTrust Student Loans offer four repayment options upon loan acceptance.</p>
+                                      <p>Immediate repayment is an optimal choice, minimizing long-term costs. Alternatively, if you possess partial in-school income but can't commit to full monthly payments, selecting an option to cover some or all interest payments each month is viable. This approach proves popular among students, effectively reducing interest accumulation compared to full loan deferment.</p>
+                                      <p>Of course, students facing financial constraints during their academic journey can opt to defer all payments until graduation. It's worth noting that this option carries a five-year limit (plus a six-month grace period post-graduation). If uncertainty surrounds your major or graduation timeline, selecting immediate payment plans can prevent full loan payments while still in school.</p>
+                                      <p>In the quest for effective funding solutions, SunTrust Student Loans offer a valuable avenue. While federal aid should remain your starting point, private lenders like SunTrust can fill the financial gaps and make your educational aspirations within reach.</p>
                                       <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <p> At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+
                                     </div>
 
 
@@ -344,21 +339,21 @@
                                 <div class="nav-list">
                                     <div class="nav-item prev">
                                         <div class="inner">
-                                            <a href="privateloan.html">
+                                            <a href="faq-bad-credit.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>The Best Option For Bad Credit Student Loans?</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="privateloan.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Private Student Loans - Everything You Need To Know</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,11 +571,11 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
-          <i class="fa fa-arrow-up arrow-top"></i>
-          <i class="fa fa-arrow-up arrow-bottom"></i>
+            <!-- <span>^</span> -->
+            <i class="fa fa-arrow-up arrow-top"></i>
+            <i class="fa fa-arrow-up arrow-bottom"></i>
         </a>
         <!-- Scroll Top End -->
     </div>
