--- a/parent-plus.html
+++ b/parent-plus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Your Guide To Federal Student Loans</title>
+    <title>Parent Plus Loans - StudiosTrack</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -284,7 +284,7 @@
                 <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
-                        <li>Federal Student Loans</li>
+                        <li>Parent Plus Loans</li>
                     </ul>
                 </div>
             </div>
@@ -305,31 +305,27 @@
 
                                 <div class="info">
 
-                                    <h3 class="title">Your Guide To Federal Student Loans</h3>
+                                    <h3 class="title">Parent PLUS Loans</h3>
 
                                     <div class="desc">
-                                      <h5>Your Comprehensive Guide to Federal Student Loans</h5>
-                                      <p>As you embark on your journey towards higher education, crucial questions arise: What are federal student loans? How do they differ from grants and private loans? Are you eligible for assistance? Navigating college applications, academic demands, and extracurricular commitments is complex enough; now, the challenge of financing your education adds another layer of consideration. Let's unravel these queries and more.</p>
-                                      <h5>The Rising Need for Financial Aid</h5>
-                                      <p>In an era where college costs range from $30,000 to $50,000 annually, the days of financing education solely through part-time jobs are a memory. Even with savings accumulated by parents, financial aid is often essential to bridge the financial gap.</p>
-                                      <h5>Varieties of Federal Financial Aid</h5>
-                                      <p>Federal student loans and grants are predicated on financial need. Demonstrated financial need can render you eligible for Pell Grants or the Federal Supplemental Educational Opportunities Grant (FSEOG), distinct from loans as they require no repayment upon graduation.</p>
-                                      <p>Even if you fall short of financial need criteria for grants, federal student loans offer significant assistance. In contrast to private student loans, they come with numerous benefits, especially if you meet eligibility criteria.</p>
-                                      <p>Subsidized Loans: Government covers interest during enrollment and the six-month grace period post-graduation.</p>
-                                      <p>Unsubsidized Loans: Interest responsibility begins upon loan receipt.</p>
-                                      <h5>Exploring Federal Loan Types</h5>
-                                      <p>Applying for federal student loans introduces you to several types, including subsidized/unsubsidized direct loans (also termed <a href="staffordloans.html">Stafford loans</a>), PLUS loans, and Perkins loans. Direct loans serve undergraduates, while PLUS loans cater to graduate students and parents of dependent undergraduates. Perkins loans, funded by schools in conjunction with the federal government, are subject to school participation.</p>
-                                      <h5>Interest Rates on Federal Student Loans</h5>
-                                      <p>Unlike private loans, federal student loans come with capped interest rates to safeguard borrowers. Unsubsidized direct loans and PLUS loans are capped at 6%, while subsidized loans and Perkins loans offer rates at or below 6.8% and 5%, respectively.</p>
-                                      <h5>Considering Loan Benefits</h5>
-                                      <p>While borrowing from the federal government, you possess various loan options. It's advisable to explore diverse lenders for bank-issued federal student loans, as reduced interest rates and benefits might be attainable.</p>
-                                      <p>However, scrutinize the loan's terms, as some benefits could vanish due to missed or delayed payments. Post-graduation financial uncertainties make it essential to avoid loans that punish hardship.</p>
-                                      <p>Financial Hardship, Loan Forgiveness, and Federal Loan Benefits</p>
-                                      <p>Federal loans offer flexibility absent in private loans during financial challenges. Payment suspension and income-based repayment options can alleviate burdens. Certain federal loans can be forgiven through public service, showcasing the government's commitment to easing financial pressures.</p>
-                                      <h5>Initiate with the FAFSA</h5>
-                                      <p>Delineating eligibility for grants and federal loans begins with a single application – the Free Application for Federal Student Aid (FAFSA). This form employs algorithms to assess your financial information, guiding aid qualification. After evaluating your aid package, consider whether additional private loans are required to supplement grants </p>
-                                      <h5>Explore and Apply for Student Loans on StudiosTrack.com</h5>
-                                      <p>At <strong>StudiosTrack.com</strong>, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
+                                      <h5>Parent PLUS Loans – Are Your Parents Eligible?</h5>
+                                      <p>Each year, numerous students discover that the federal student aid they qualify for falls short of covering their entire studiostrack costs. Fortunately, there's a solution in the form of Parent PLUS loans offered by the federal government, allowing parents of dependent students to bridge the financial gap.</p>
+                                      <p>A Parent PLUS loan is an unsubsidized, low-interest direct loan provided by the federal government. It serves both graduate students and parents of dependent undergraduates, designed to cover studiostrack and fees not covered by other financial aid. Although interest accrues during the loan period, repayment doesn't commence until six months after the student leaves school, providing a grace period.</p>
+                                      <h5>Who is Eligible for a Parent PLUS Loan?</h5>
+                                      <p>To qualify for Parent PLUS loans, the applicant must be the student's biological, adoptive parent, or a stepparent. The student must be enrolled at least half-time in a school participating in the federal Direct Loan Program (a majority of schools are part of this program). Additionally, the student must be listed as a dependent and supply their parent's income and tax information on the FAFSA (Free Application for Federal Student Aid) before applying for a Parent PLUS loan.</p>
+                                      <p>Apart from these prerequisites, a credit check is necessary. Parent PLUS loans are unique among federal loans in requiring a credit assessment, as they address the gap between need-based financial aid and outstanding studiostrack and fees. Consequently, these loans often carry larger amounts compared to other direct student loans, posing increased risk to the federal government.</p>
+                                      <p>To pass the credit check, parents need to be US citizens, eligible noncitizens residing in the United States, and must not be in default on any federal student loans or owe overpayments on federal student grants. Essentially, they must meet eligibility criteria for any Federal Student Aid program.</p>
+                                      <p>Interestingly, qualifying for a Parent PLUS loan is often less stringent than qualifying for a low-interest private loan. Moreover, even if a parent has an adverse credit history and doesn't qualify independently, they can secure a PLUS loan with a creditworthy endorser.</p>
+                                      <h5>How Can Parents Apply for a Parent PLUS Loan?</h5>
+                                      <p>Once the student completes the FAFSA, parents should visit StudentLoans.gov, choose the "Parent Borrower" section, and select "Request a PLUS loan." Additionally, they must complete and sign (or e-sign) a PLUS loan Master Promissory Note (MPN), a legally binding document confirming their commitment to repaying federal student loans, including interest and fees.</p>
+                                      <p>With the FAFSA, the parent's PLUS loan request, and the MPN in place, the groundwork for managing studiostrack and educational expenses is laid. Generally, there's no need for another MPN unless the school requires separate ones for different loans on the same student account. However, parents should renew their parent PLUS loan annually, akin to students renewing their FAFSA.</p>
+                                      <h5>Parent PLUS Loan Restrictions</h5>
+                                      <p>While there's no fixed cap on parent PLUS loans, the loan amount can't exceed studiostrack costs minus other financial aid. Each semester, the loan is disbursed to the student's account, covering studiostrack and applicable fees. Any leftover funds are directed to the parent, strictly earmarked for academic expenses. Parents can utilize the surplus to pay for supplies and fees or transfer it to the student for these purposes.</p>
+                                      <h5>Understanding the Interest Rate</h5>
+                                      <p>Parent PLUS loans come with a maximum interest rate of 10.5%, maintaining a fixed rate for the loan's duration. This stability contrasts with fluctuating rates found in other loans. For context, the interest rate was 6.41% in 2013 and rose to 7.21% in 2014.</p>
+                                      <h5>Exploring Loan Options</h5>
+                                      <p>As you explore avenues to finance your college education, it's essential to discuss Parent PLUS loans versus private loans with your parents. While Parent PLUS loans offer federal loan advantages (fixed interest rates, flexible repayment options), they might not suit all borrowers. If you come across a fixed-rate loan with a lower percentage, scrutinize its terms to ensure it doesn't become a burden during challenging financial times.</p>
+                                      <p>Explore and Apply for Student Loans on at StudiosTrack.com, we have established strong partnerships with reputable and trusted entities in the private student lending sector. Our mission is to assist students and their families in securing the necessary funds for their college education. By harnessing the power of comparison tools and thorough loan searches, StudiosTrack offers access to a diverse selection of more than 20 student loan options. Our platform is specifically designed to guide students and their families through the complex landscape of financial aid information, ensuring a seamless and informed decision-making process.</p>
                                     </div>
 
 
@@ -346,19 +342,19 @@
                                         <div class="inner">
                                             <a href="privateloan.html">
                                                 <div class="hover-bg"></div>
-                                                <h6>Private Student Loans – Everything You Need To Know?</h6>
+                                                <h6>Private Student Loans Through Sallie Mae</h6>
                                             </a>
                                         </div>
                                     </div>
 
                                     <div class="nav-item next">
-                                      <div class="inner">
-                                          <a href="loan-college-ave.html">
-                                              <div class="hover-bg"></div>
-                                              <h6>Could Collge Ave Student Loans Be The Lender of the Future?</h6>
-                                          </a>
-                                      </div>
-                                  </div>
+                                        <div class="inner">
+                                            <a href="loan-wells-fargo.html">
+                                                <div class="hover-bg"></div>
+                                                <h6>Are Wells Fargo Student Loans Right For You?</h6>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -576,7 +572,6 @@
             <!-- Footer Copyright End -->
           </div>
         </div>
-
         <!-- Scroll Top Start -->
         <a href="#" class="scroll-top" id="scroll-top">
           <i class="fa fa-arrow-up arrow-top"></i>
